--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.EduTaskerDark" parent="Theme.MaterialComponents.DayNight.DarkActionBar"/>
-    <style name="Theme.EduTasker" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.EduTasker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
+        <item name="colorOnPrimary">@color/white</item>
+    </style>
 </resources>
